优化构建配置：仅构建APK和iOS版本，移除Web构建
- 更新build.yml：专注于APK构建
- 更新release.yml：简化发布流程，仅发布APK
- 禁用web.yml：移除Web构建触发条件
- 新增ios.yml：添加iOS构建工作流

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,4 +1,4 @@
-name: Build Peiyu Reader APK
+name: Build Peiyu Reader iOS
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     
     steps:
     - uses: actions/checkout@v4
@@ -28,11 +28,11 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
       
-    - name: Build APK with Gradle
-      run: ./gradlew assembleRelease --build-cache --parallel --daemon --warning-mode all
+    - name: Build iOS with Gradle
+      run: ./gradlew linkPodReleaseFrameworkIosArm64 --build-cache --parallel --daemon --warning-mode all
       
-    - name: Upload APK
+    - name: Upload iOS Framework
       uses: actions/upload-artifact@v4
       with:
-        name: peiyu-reader-apk
-        path: app/build/outputs/apk/release/*.apk
+        name: peiyu-reader-ios-framework
+        path: app/build/bin/iosArm64/releaseFramework/*.framework
