--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,6 @@
-name: Build and Release Peiyu Reader
+name: Build and Release Peiyu Reader APK
 
 on:
-#  push:
-#    branches:
-#      - master
-#    paths:
-#      - 'CHANGELOG.md'
   push:
     branches:
       - master
@@ -17,7 +12,6 @@ jobs:
     if: github.event_name != 'pull_request' && github.ref == 'refs/heads/master'
     outputs:
       version: ${{ steps.set-ver.outputs.version }}
-      play: ${{ steps.check.outputs.play }}
       sign: ${{ steps.check.outputs.sign }}
     steps:
       - id: set-ver
@@ -28,22 +22,13 @@ jobs:
           if [ ! -z "${{ secrets.RELEASE_KEY_STORE }}" ]; then
             echo "sign=yes" >> $GITHUB_OUTPUT
           fi
-          if [ ! -z "${{ secrets.SERVICE_ACCOUNT_JSON }}" ]; then
-            echo "play=yes" >> $GITHUB_OUTPUT
-          fi
 
   build:
     needs: prepare
     if: ${{ needs.prepare.outputs.sign }}
-    strategy:
-      matrix:
-        product: [ app, google ]
-      fail-fast: false
     runs-on: ubuntu-latest
     env:
-      product: ${{ matrix.product }}
       VERSION: ${{ needs.prepare.outputs.version }}
-      play: ${{ needs.prepare.outputs.play }}
     steps:
       - uses: actions/checkout@v4
 
@@ -55,8 +40,6 @@ jobs:
 
       - name: Release Apk Sign
         run: |
-          # not use this output
-          # echo "KeyStore=yes" >> $GITHUB_OUTPUT
           echo -e "\n" >> gradle.properties
           echo RELEASE_KEY_ALIAS='${{ secrets.RELEASE_KEY_ALIAS }}' >> gradle.properties
           echo RELEASE_KEY_PASSWORD='${{ secrets.RELEASE_KEY_PASSWORD }}' >> gradle.properties
@@ -72,72 +55,31 @@ jobs:
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v4
 
-      - name: Build With Gradle
+      - name: Build APK with Gradle
         run: |
-          echo "开始进行${{ env.product }}构建"
+          echo "开始构建佩宇书屋APK"
           chmod +x gradlew
-          ./gradlew assemble${{ env.product }}release --build-cache --parallel --daemon --warning-mode all
+          ./gradlew assembleRelease --build-cache --parallel --daemon --warning-mode all
 
       - name: Organize the Files
         run: |
           mkdir -p ${{ github.workspace }}/apk/
           cp -rf ${{ github.workspace }}/app/build/outputs/apk/*/*/*.apk ${{ github.workspace }}/apk/
           
-      - name: Upload App To Artifact
+      - name: Upload APK To Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: peiyu-reader_${{ env.product }}
+          name: peiyu-reader-apk
           path: ${{ github.workspace }}/apk/peiyu-reader*.apk
 
-      - name: Release
-        if: ${{ env.product == 'app' }}
+      - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-          name: peiyu-reader_${{ env.VERSION }}
+          name: 佩宇书屋_${{ env.VERSION }}
           tag_name: ${{ env.VERSION }}
           body_path: ${{ github.workspace }}/CHANGELOG.md
           draft: false
           prerelease: false
-          files: ${{ github.workspace }}/apk/peiyu-reader_app_*.apk
+          files: ${{ github.workspace }}/apk/peiyu-reader*.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Prepare For GooglePlay
-        if: env.product == 'google' && env.play == 'yes'
-        run: |
-          mkdir -p ReleaseNotes
-          ln -s ${{ github.workspace }}/CHANGELOG.md ReleaseNotes/whatsnew-en-US
-          ln -s ${{ github.workspace }}/CHANGELOG.md ReleaseNotes/whatsnew-zh-CN
-
-      - name: Release To GooglePlay
-        if: env.product == 'google' && env.play == 'yes'
-        uses: r0adkll/upload-google-play@v1
-        with:
-          serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
-          packageName: com.peiyu.reader
-          releaseFiles: ${{ github.workspace }}/apk/peiyu-reader_google_*.apk
-          track: production
-          whatsNewDirectory: ${{ github.workspace }}/ReleaseNotes
-
-      - name: Push Assets To "release" Branch
-        if: ${{ github.actor == 'gedoor' }}
-        run: |
-          cd $GITHUB_WORKSPACE/apk/
-          git init
-          git checkout -b release
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git remote add origin "https://${{ github.actor }}:${{ secrets.ACTIONS_TOKEN }}@github.com/${{ github.actor }}/yueduqi"
-          git add *.apk
-          git commit -m "${{ env.VERSION }}"
-          git push -f -u origin release
-          
-      - name: Purge Jsdelivr Cache
-        if: ${{ github.actor == 'gedoor' }}
-        run: |
-          result=$(curl -s https://purge.jsdelivr.net/gh/${{ github.actor }}/yueduqi@release/)
-          if echo $result |grep -q 'success.*true'; then
-            echo "jsdelivr缓存更新成功"
-          else
-            echo $result
-          fi
