--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ static def releaseTime() {
 }
 
 def name = "peiyu-reader"
-def version = "3." + releaseTime()
+def version = "1.0.1"
 def gitCommits = Integer.parseInt('git rev-list HEAD --count'.execute().text.trim())
 
 android {
