--- a/settings.gradle
+++ b/settings.gradle
@@ -45,7 +45,7 @@ dependencyResolutionManagement {
         //maven { url 'https://repo.huaweicloud.com/repository/maven/' }
     }
 }
-rootProject.name = 'legado'
+rootProject.name = 'peiyu-reader'
 
 include ':app'
 include ':modules:book'
